<resources>

<string name="app_name">Gesture Collector</string>
<string name="action_about">About</string>
<string name="action_export">Export</string>
<string name="waiting_msg">Waiting for sensor input from a wearable..</string>
<string name="devices">Devices</string>
<string name="device_name_1">Device 1</string>
<string name="device_name_2">Device 2</string>

<!--Tagging names-->
<string name="tag1_name">1</string>
<string name="tag2_name">2</string>
<string name="tag3_name">3</string>
<string name="tag4_name">4</string>
<string name="tag5_name">5</string>
<string name="tag6_name">6</string>
<string name="tag7_name">7</string>
<string name="tag8_name">8</string>
<string name="tag9_name">9</string>
<string name="tag0_name">0</string>
<string name="male_name">Male</string>
<string name="female_name">Female</string>
<string name="age_hint">  Age  </string>
<string name="name_hint">Name</string>
<string name="height_hint">Height(CM)</string>
<string name="start1_name">Start1</string>
<string name="start2_name">Start2</string>

<string name="done_msg">Done!</string>
<string name="count_down_time">15</string>
<string name="about_development_content"><![CDATA[
<p><b>Development</b> <a href="http://stuermer-benjamin.de/">Benjamin Stürmer</a></p>
<p><b>Development</b> <a href="https://plus.google.com/u/0/+SebastianKaspari/posts">Sebastian Kaspari</a></p>
<p><b>Development</b> <a href="https://plus.google.com/u/0/+JuhaniLehtimäki">Juhani Lehtimäki</a></p>
]]></string>

<string name="about_open_source_content"><![CDATA[
<p><b>Square Otto</b> <a href="http://square.github.io/otto/">http://square.github.io/otto/</a></p>
]]></string>


<string name="about_github_content"><![CDATA[
<p><b>Download source from</b><br/><a href="https://github.com/pocmo/SensorDashboard">https://github.com/pocmo/SensorDashboard</a></p>
<p>Distributed under Apache 2 License</p>
]]></string>


</resources>
