<LinearLayout
    android:id="@+id/main_activity"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_awesome_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:elevation="8dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/empty_state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:text="@string/action_idle"
                    android:textSize="70sp"/>

                <Button
                    android:id="@+id/btn_action_finish"
                    android:layout_gravity="top"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/finish_tag" />

            </LinearLayout>


            <TextView
                android:id="@+id/timer_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="CountDown: IDLE"
                android:textSize="30sp"/>

            <TextView
                android:id="@+id/connection_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="watch connection: false "
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/data_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="None"
                android:textSize="20sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_alignParentBottom="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFcccccc"
                android:elevation="0dp"
                android:padding="0dp">

                <EditText
                    android:id="@+id/text_input_name"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/name_hint"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/text_input_weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="Weight in KG"
                    android:inputType="number" />


                <EditText
                    android:id="@+id/text_input_age"
                    android:layout_height="wrap_content"
                    android:hint="@string/age_hint"
                    android:layout_width="wrap_content"
                    android:inputType="number"/>
                <EditText
                    android:id="@+id/text_input_height"
                    android:layout_height="wrap_content"
                    android:hint="@string/height_hint"
                    android:layout_width="wrap_content"
                    android:inputType="number"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFcccccc"
                android:elevation="0dp"
                android:orientation="horizontal"
                android:padding="0dp"
                android:gravity="center">


                <RadioGroup
                    android:id="@+id/radioGrpGender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <RadioButton
                        android:id="@+id/radioM"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:checked="true"
                        android:layout_weight="1"
                        android:textSize="14sp"
                        android:text="@string/male_name"
                        />
                    <RadioButton
                        android:id="@+id/radioF"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:checked="false"
                        android:layout_weight="1"
                        android:textSize="14sp"
                        android:text="@string/female_name"
                        />
                </RadioGroup>
                <RadioGroup
                    android:id="@+id/radioGrpHand"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <RadioButton
                        android:id="@+id/radioLeft"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:checked="true"
                        android:layout_weight="1"
                        android:textSize="14sp"
                        android:text="Right"
                        />
                    <RadioButton
                        android:id="@+id/radioRight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:checked="false"
                        android:layout_weight="1"
                        android:textSize="14sp"
                        android:text="Left"
                        />
                </RadioGroup>

                <Button
                    android:id="@+id/button_refresh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="REFRESH" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:background="#FFcccccc"
                android:elevation="0dp"
                android:orientation="vertical"
                >

                <LinearLayout
                    android:id="@+id/linearLayout_top_tags"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FFcccccc"
                    android:elevation="0dp"
                    android:orientation="horizontal"
                    android:padding="0dp"
                    android:gravity="center"
                    android:visibility="gone">

                    <Button
                        android:id="@+id/tag1_button"
                        android:layout_width="56dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="0dp"
                        style="?android:buttonStyle"
                        android:text="@string/tag1_name"/>

                    <Button
                        android:id="@+id/tag2_button"
                        android:layout_width="56dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="0dp"
                        style="?android:buttonStyle"
                        android:text="@string/tag2_name"/>

                    <Button
                        android:id="@+id/tag3_button"
                        android:layout_width="56dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="0dp"
                        style="?android:buttonStyle"
                        android:text="@string/tag3_name"/>

                    <Button
                        android:id="@+id/tag4_button"
                        android:layout_width="56dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="0dp"
                        style="?android:buttonStyle"
                        android:text="@string/tag4_name"/>

                    <Button
                        android:id="@+id/tag5_button"
                        android:layout_width="56dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="0dp"
                        style="?android:buttonStyle"
                        android:text="@string/tag5_name"/>

                    <Button
                        android:id="@+id/tag_start1_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="0dp"
                        style="?android:buttonStyle"
                        android:text="@string/start1_name"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout_bottom_tags"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FFcccccc"
                    android:elevation="0dp"
                    android:orientation="horizontal"
                    android:padding="0dp"
                    android:gravity="center"
                    android:visibility="gone">

                    <Button
                        android:id="@+id/tag6_button"
                        android:layout_width="56dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="0dp"
                        style="?android:buttonStyle"
                        android:text="@string/tag6_name"/>

                    <Button
                        android:id="@+id/tag7_button"
                        android:layout_width="56dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="0dp"
                        style="?android:buttonStyle"
                        android:text="@string/tag7_name"/>

                    <Button
                        android:id="@+id/tag8_button"
                        android:layout_width="56dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="0dp"
                        style="?android:buttonStyle"
                        android:text="@string/tag8_name"/>

                    <Button
                        android:id="@+id/tag9_button"
                        android:layout_width="56dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="0dp"
                        style="?android:buttonStyle"
                        android:text="@string/tag9_name"/>

                    <Button
                        android:id="@+id/tag0_button"
                        android:layout_width="56dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="0dp"
                        style="?android:buttonStyle"
                        android:text="@string/tag0_name"/>

                    <Button
                        android:id="@+id/tag_start2_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="0dp"
                        style="?android:buttonStyle"
                        android:text="@string/start2_name"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FFcccccc"
                    android:elevation="0dp"
                    android:orientation="horizontal"
                    android:padding="0dp"
                    android:gravity="center"
                    android:visibility="visible">
                    <Button
                        android:id="@+id/btn_time_calibration"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Time Calibration"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>


    <android.support.design.widget.NavigationView
        android:id="@+id/navView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/drawer_layout"/>

</LinearLayout>
